--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -8,7 +8,7 @@ main {
             position: absolute;
             width: 500px;
             left: 190px;
-            top: 440px;
+            top: 520px;
             z-index: 1;
             font-size: 55px;
             font-weight: bold;
@@ -24,8 +24,7 @@ main {
             font-family: 'Montserrat', sans-serif, Helvetica;
             position: absolute;
             left: 100px;
-            width: 286px;
-            top: 490px;
+            bottom: 300px;
             font-size: 37px;
             z-index: 1;
             color: #FFFFFF;
