--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -16,9 +16,19 @@ header {
                 margin-right: 5px;
                 border-radius: 10px;
                 transition: all .5s;
+                @media screen and (max-width:400px){
+                    text-align: center;
+                    letter-spacing: 1.5px;
+                }
                 &:hover {
                     background-color: white;
                     color: #000;
+                    @media screen and (max-width:400px){
+                        &:hover {
+                            background-color: #1c1c1c;
+                            color: white;  
+                        }
+                    }
                 }
             }
         }
