--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,10 @@ main .cards .card-container {
   display: flex;
   justify-content: center;
 }
+main .cards .card-container .card img {
+  height: 90%;
+  object-fit: cover;
+}
 main .cards .card-container .card .card-body .card-text {
   color: #7a7777;
   text-decoration: none;
