--- a/scss/componentes/_footer.scss
+++ b/scss/componentes/_footer.scss
@@ -1,18 +1,16 @@
 @import '../bases/variables';
 
 footer {
+        .navbar-footer-container {
+            background-color:map-get($bg-header, bg-color-dark );
+        }
         .nav-link {
-            @extend %link-black;
+            @extend %link-white;
             letter-spacing: 0.4px;
             margin: 5px 5px;
             border-radius: 10px;
             transition: all .5s;
-            font-weight: bold;
-            &:hover {
-                color: #fff;
-                background: #000;
-                font-weight: normal;
-            }
+            font-weight:initial;
             i {
                 font-size: nth($fonts, 2);
             }
@@ -38,6 +36,7 @@ footer {
 
     .copy {
         .copy-text {
+            color: white;
             .corazon {
                 transition: all 1s;
                 &:hover {
