--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -19,38 +19,41 @@ main {
             backdrop-filter:blur(100px);
             color: rgb(20, 26, 25);
             font-weight: bold;
-        }
-        .text-over-slide-md {
-            font-family: 'Montserrat', sans-serif, Helvetica;
-            position: absolute;
-            left: 100px;
-            bottom: 300px;
-            font-size: 37px;
-            z-index: 1;
-            color: #FFFFFF;
-            text-align: center;
-            border-radius: 10px;
-            background-color: rgba(255, 255, 255, .2);
-            backdrop-filter:blur(100px);
-            color: rgb(20, 26, 25);
-            padding: 3px;
-            font-weight: bold;
-        }
-        .text-over-slide-mob {
-            font-family: 'Montserrat', sans-serif, Helvetica;
-            position: absolute;
-            left: 34px;
-            width: 300px;
-            top: 480px;
-            font-size: 30px;
-            z-index: 1;
-            color: #FFFFFF;
-            text-align: center;
-            border-radius: 10px;
-            background-color: rgba(255, 255, 255, .2);
-            backdrop-filter:blur(100px);
-            color: rgb(20, 26, 25);
-            font-weight: bold;
+            @media screen and (max-width:880px){
+                font-family: 'Montserrat', sans-serif, Helvetica;
+                position: absolute;
+                left: 100px;
+                bottom: 300px;
+                font-size: 37px;
+                z-index: 3;
+                color: #FFFFFF;
+                text-align: center;
+                border-radius: 10px;
+                background-color: rgba(255, 255, 255, .2);
+                backdrop-filter:blur(100px);
+                color: rgb(20, 26, 25);
+                padding: 3px;
+                font-weight: bold;
+                height: 50px;
+                width: 350px;
+            }
+            @media screen and (max-width:400px){
+                font-family: 'Montserrat', sans-serif, Helvetica;
+                position: absolute;
+                left: 34px;
+                width: 300px;
+                top: 480px;
+                font-size: 30px;
+                z-index: 1;
+                color: #FFFFFF;
+                text-align: center;
+                border-radius: 10px;
+                background-color: rgba(255, 255, 255, .2);
+                backdrop-filter:blur(100px);
+                color: rgb(20, 26, 25);
+                font-weight: bold;
+            }
+            }
         }
 
         .carousel-item img {
@@ -100,4 +103,3 @@ main {
     .respuesta {
         font-size: nth($fonts,1);
     }
-}
