--- a/css/style.css
+++ b/css/style.css
@@ -38,11 +38,23 @@ header .navbar .nav-item .nav-link {
     letter-spacing: 1.5px;
   }
 }
+@media screen and (max-width: 900px) {
+  header .navbar .nav-item .nav-link {
+    text-align: center;
+    letter-spacing: 1.5px;
+  }
+}
 header .navbar .nav-item .nav-link:hover {
   background-color: white;
   color: #000;
 }
 @media screen and (max-width: 400px) {
+  header .navbar .nav-item .nav-link:hover:hover {
+    background-color: #1c1c1c;
+    color: white;
+  }
+}
+@media screen and (max-width: 900px) {
   header .navbar .nav-item .nav-link:hover:hover {
     background-color: #1c1c1c;
     color: white;
@@ -98,7 +110,7 @@ main .carousel .text-over-slide {
     position: absolute;
     left: 34px;
     width: 300px;
-    top: 480px;
+    top: 600px;
     font-size: 30px;
     z-index: 1;
     color: #FFFFFF;
@@ -108,6 +120,7 @@ main .carousel .text-over-slide {
     backdrop-filter: blur(100px);
     color: #141a19;
     font-weight: bold;
+    height: 42px;
   }
 }
 main .carousel-item img {
@@ -134,6 +147,12 @@ main .carousel-item img {
   width: 90%;
 }
 
+@media screen and (max-width: 400px) {
+  #faqs {
+    width: 90%;
+  }
+}
+
 .pregunta {
   font-size: 20px;
 }
@@ -150,10 +169,13 @@ footer .nav-link {
   margin: 5px 5px;
   border-radius: 10px;
   transition: all 0.5s;
-  font-weight: initial;
 }
 footer .nav-link i {
   font-size: 16px;
+}
+footer .nav-link:hover {
+  background-color: white;
+  color: #000;
 }
 footer .ig {
   color: #E1306C;
