--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -24,6 +24,11 @@ header {
                     text-align: center;
                     letter-spacing: 1.5px;
                 }
+                @media screen and (max-width:900px) {
+                    text-align: center;
+                    letter-spacing: 1.5px;
+                    
+                }
 
                 &:hover {
                     background-color: white;
@@ -35,6 +40,13 @@ header {
                             color: white;
                         }
                     }
+                    @media screen and (max-width:900px) {
+                        &:hover {
+                            background-color: #1c1c1c;
+                            color: white;
+                        }
+                    }
+
                 }
             }
         }
