--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -45,7 +45,7 @@ main {
                 position: absolute;
                 left: 34px;
                 width: 300px;
-                top: 480px;
+                top: 600px;
                 font-size: 30px;
                 z-index: 1;
                 color: #FFFFFF;
@@ -55,6 +55,7 @@ main {
                 backdrop-filter: blur(100px);
                 color: rgb(20, 26, 25);
                 font-weight: bold;
+                height: 42px;
             }
         }
     }
@@ -100,6 +101,12 @@ main {
 }
 
 // FAQS 
+
+#faqs {
+    @media screen and (max-width:400px){
+        width: 90%;
+    }
+}
 
 .pregunta {
     font-size: nth($fonts, 4);
