--- a/scss/componentes/_footer.scss
+++ b/scss/componentes/_footer.scss
@@ -1,6 +1,7 @@
 @import '../bases/variables';
 
 footer {
+    // NAV FOOTER 
     .navbar-footer-container {
         background-color: map-get($bg-header, bg-color-dark);
     }
@@ -15,11 +16,10 @@ footer {
             font-size: nth($fonts, 2);
         }
         &:hover {
-            background-color: white;
-            color: #000;
+            color: rgb(129, 129, 129);
         }
     }
-
+    // REDES 
     .ig {
         color: #E1306C;
         transition: all 1s;
@@ -40,7 +40,7 @@ footer {
         }
     }
 }
-
+// COPY TEXT
 .copy {
     .copy-text {
         color: white;
@@ -74,6 +74,7 @@ footer {
 
 
 footer {
+    // ICONS FOOTER 
     .nav-link {
         i {
             font-size: nth($fonts, 4);
@@ -98,6 +99,9 @@ footer {
 
 
 }
+
+
+// WHATSAPP BUTTON 
 
 .whatsapp {
     a {
