--- a/scss/componentes/_main.scss
+++ b/scss/componentes/_main.scss
@@ -4,6 +4,7 @@
 main {
 
     .carousel {
+        // TITULAR 
         .text-over-slide {
             font-family: 'Montserrat', sans-serif, Helvetica;
             position: absolute;
@@ -40,10 +41,27 @@ main {
                 width: 350px;
             }
 
-            @media screen and (max-width:400px) {
+            @media screen and (max-width:450px) {
                 font-family: 'Montserrat', sans-serif, Helvetica;
                 position: absolute;
                 left: 34px;
+                width: 300px;
+                top: 600px;
+                font-size: 30px;
+                z-index: 1;
+                color: #FFFFFF;
+                text-align: center;
+                border-radius: 10px;
+                background-color: rgba(255, 255, 255, .2);
+                backdrop-filter: blur(100px);
+                color: rgb(20, 26, 25);
+                font-weight: bold;
+                height: 42px;
+            }
+            @media screen and (max-width:325px) {
+                font-family: 'Montserrat', sans-serif, Helvetica;
+                position: absolute;
+                left: 10px;
                 width: 300px;
                 top: 600px;
                 font-size: 30px;
